--- a/Quiz/View Controllers/QuizViewController.xib
+++ b/Quiz/View Controllers/QuizViewController.xib
@@ -32,7 +32,7 @@
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <connections>
-                        <action selector="showQuestion:" destination="-1" eventType="touchUpInside" id="Cd8-rE-Ix0"/>
+                        <action selector="showQuestion:" destination="-1" eventType="touchUpInside" id="GgD-Mw-xDY"/>
                     </connections>
                 </button>
             </subviews>
