--- a/Quiz/View Controllers/QuizViewController.xib
+++ b/Quiz/View Controllers/QuizViewController.xib
@@ -35,14 +35,24 @@
                         <action selector="showQuestion:" destination="-1" eventType="touchUpInside" id="GgD-Mw-xDY"/>
                     </connections>
                 </button>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="???" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ssh-Eo-ssu">
+                    <rect key="frame" x="8" y="208" width="390" height="20.5"/>
+                    <accessibility key="accessibilityConfiguration" label="answer-label"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" red="0.33725490196078434" green="0.15686274509803921" blue="0.45098039215686275" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstItem="enq-80-Vqr" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leadingMargin" id="7PK-TY-Krk"/>
                 <constraint firstAttribute="trailingMargin" secondItem="Kb7-dp-Q1o" secondAttribute="trailing" id="HD4-by-Hgn"/>
                 <constraint firstItem="Kb7-dp-Q1o" firstAttribute="top" secondItem="enq-80-Vqr" secondAttribute="bottom" constant="20" id="P5S-kY-aC7"/>
+                <constraint firstItem="Ssh-Eo-ssu" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leadingMargin" id="T51-dc-YhN"/>
                 <constraint firstAttribute="trailingMargin" secondItem="enq-80-Vqr" secondAttribute="trailing" id="YXQ-Hp-VxA"/>
                 <constraint firstItem="Kb7-dp-Q1o" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leadingMargin" id="gPP-Ma-9td"/>
+                <constraint firstItem="Ssh-Eo-ssu" firstAttribute="top" secondItem="Kb7-dp-Q1o" secondAttribute="bottom" constant="100" id="qen-ZZ-hhO"/>
+                <constraint firstAttribute="trailingMargin" secondItem="Ssh-Eo-ssu" secondAttribute="trailing" constant="8" id="tak-S5-VAs"/>
                 <constraint firstItem="enq-80-Vqr" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="topMargin" constant="50" id="vJt-HL-Y1W"/>
             </constraints>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
